# RelaSim

./: .gitignore  README.md
backend/: pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py  config.py
backend/app/api/: __init__.py  relasim.py
backend/app/models/: __init__.py
backend/app/relasim/: __init__.py  engine.py  models.py  persona_generator.py  report_generator.py  simulator.py  store.py
backend/app/utils/: llm_client.py  logger.py  retry.py
backend/scripts/: run_relasim.py  test_relasim_offline.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/api/: index.js  relasim.js
frontend/src/components/: RelaSimGraph.vue
frontend/src/router/: index.js
frontend/src/views/: Home.vue  RelaSimReportView.vue  RelaSimView.vue
locales/: en.json  zh.json
